--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<embed src="Huntress_Ian_CV.pdf">
+<embed src="Huntress_Ian_CV.pdf" width="800px" height="2100px">
 
 </body>
 </html>
