Cut dumb pagination

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Portfolio, 2 Column</title>
+    <title>Ian Huntress</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -43,6 +43,7 @@
                 </a>
             </div>
             <!-- Navbar links -->
+            <!--
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
@@ -61,6 +62,7 @@
                     </li>
                 </ul>
             </div>
+            -->
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
@@ -72,7 +74,7 @@
         <!-- Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Portfolio
+                <h1 class="page-header">IH
                     <small>Recent Work</small>
                 </h1>
             </div>
@@ -86,95 +88,20 @@
                     <img class="img-responsive" src="http://lorempixel.com/700/400/nature/1" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Title</a>
+                    <a href="#">3JS Arena Prototype</a>
                 </h3>
-                <p>Upon yielding, kind sea subdue very seed sixth them lesser one lesser there earth days were multiply so sixth gathering fifth that man fowl made.</p>
+                <p>Wizards, throwing fireballs in your browser</p>
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="#">
                     <img class="img-responsive" src="http://lorempixel.com/700/400/nature/2" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Title</a>
+                    <a href="#">CV</a>
                 </h3>
-                <p>Upon yielding, kind sea subdue very seed sixth them lesser one lesser there earth days were multiply so sixth gathering fifth that man fowl made.</p>
+                <p>Bioinformatics + Machine Learning + Molecular Biology</p>
             </div>
         </div>
-        <!-- /.row -->
-
-        <!-- Projects Row -->
-        <div class="row">
-            <div class="col-md-6 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://lorempixel.com/700/400/nature/3" alt="">
-                </a>
-                <h3>
-                    <a href="#">Project Title</a>
-                </h3>
-                <p>Upon yielding, kind sea subdue very seed sixth them lesser one lesser there earth days were multiply so sixth gathering fifth that man fowl made.</p>
-            </div>
-            <div class="col-md-6 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://lorempixel.com/700/400/nature/4" alt="">
-                </a>
-                <h3>
-                    <a href="#">Project Title</a>
-                </h3>
-                <p>Upon yielding, kind sea subdue very seed sixth them lesser one lesser there earth days were multiply so sixth gathering fifth that man fowl made.</p>
-            </div>
-        </div>
-
-
-        <!-- Projects Row -->
-        <div class="row">
-            <div class="col-md-6 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://lorempixel.com/700/400/nature/5" alt="">
-                </a>
-                <h3>
-                    <a href="#">Project Title</a>
-                </h3>
-                <p>Upon yielding, kind sea subdue very seed sixth them lesser one lesser there earth days were multiply so sixth gathering fifth that man fowl made.</p>
-            </div>
-            <div class="col-md-6 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://lorempixel.com/700/400/nature/6" alt="">
-                </a>
-                <h3>
-                    <a href="#">Project Title</a>
-                </h3>
-                <p>Upon yielding, kind sea subdue very seed sixth them lesser one lesser there earth days were multiply so sixth gathering fifth that man fowl made.</p>
-            </div>
-        </div>
-        <!-- Pagination -->
-        <div class="row text-center">
-            <div class="col-lg-12">
-                <ul class="pagination">
-                    <li>
-                        <a href="#">&laquo;</a>
-                    </li>
-                    <li class="active">
-                        <a href="#">1</a>
-                    </li>
-                    <li>
-                        <a href="#">2</a>
-                    </li>
-                    <li>
-                        <a href="#">3</a>
-                    </li>
-                    <li>
-                        <a href="#">4</a>
-                    </li>
-                    <li>
-                        <a href="#">5</a>
-                    </li>
-                    <li>
-                        <a href="#">&raquo;</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <!-- /.row -->
 
     </div>
     <!-- /.container -->
