--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <!--
                 <a class="navbar-brand" href="#">
                 	<span class="glyphicon glyphicon-fire"></span> 
-                	Logo
+                    Logo
                 </a>
+                 -->
             </div>
             <!-- Navbar links -->
             <!--
@@ -74,7 +76,7 @@
         <!-- Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">IH
+                <h1 class="page-header">Ian Huntress
                     <small>Recent Work</small>
                 </h1>
             </div>
@@ -88,7 +90,7 @@
                     <img class="img-responsive" src="http://lorempixel.com/700/400/nature/1" alt="">
                 </a>
                 <h3>
-                    <a href="#">3JS Arena Prototype</a>
+                    <a href="WizardArenaTest">3JS Arena Prototype</a>
                 </h3>
                 <p>Wizards, throwing fireballs in your browser</p>
             </div>
@@ -97,7 +99,7 @@
                     <img class="img-responsive" src="http://lorempixel.com/700/400/nature/2" alt="">
                 </a>
                 <h3>
-                    <a href="#">CV</a>
+                    <a href="Huntress_Ian_CV">CV</a>
                 </h3>
                 <p>Bioinformatics + Machine Learning + Molecular Biology</p>
             </div>
@@ -107,38 +109,7 @@
     <!-- /.container -->
 	
 	<footer>
-		<div class="footer-blurb">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-4 footer-blurb-item">
-						<img class="img-circle" src="http://lorempixel.com/100/100/people/3" alt="" width="100" height="100">
-						<h3>My Stuff</h3>
-						<p>Upon yielding, kind sea subdue very seed sixth them lesser one lesser there earth days were multiply so sixth gathering fifth that man fowl made.</p>
-						<p><a class="btn btn-primary" href="#">More Stuff</a></p>
-					</div>
-					<div class="col-sm-4 footer-blurb-item">
-						<img class="img-circle" src="http://lorempixel.com/100/100/people/1" alt="" width="100" height="100">
-						<h3>Your Stuff</h3>
-						<p>Upon yielding, kind sea subdue very seed sixth them lesser one lesser there earth days were multiply so sixth gathering fifth that man fowl made.</p>
-						<p><a class="btn btn-primary" href="#">More Stuff</a></p>
-					</div>
-					<div class="col-sm-4 footer-blurb-item">
-						<img class="img-circle" src="http://lorempixel.com/100/100/people/2" alt="" width="100" height="100">
-						<h3>Our Stuff</h3>
-						<p>Upon yielding, kind sea subdue very seed sixth them lesser one lesser there earth days were multiply so sixth gathering fifth that man fowl made.</p>
-						<p><a class="btn btn-primary" href="#">More Stuff</a></p>
-					</div>
 
-				</div>
-				<!-- /.row -->	
-			</div>
-        </div>
-        
-        <div class="copyright">
-        	<div class="container">
-        		<p>Copyright &copy; Example.com 2015</p>
-        	</div>
-        </div>
 	</footer>
 
 	
