--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-6 portfolio-item">
-                <a href="#">
+                <a href="WizardArenaTest">
                     <img class="img-responsive" src="http://lorempixel.com/700/400/nature/1" alt="">
                 </a>
                 <h3>
@@ -95,7 +95,7 @@
                 <p>Wizards, throwing fireballs in your browser</p>
             </div>
             <div class="col-md-6 portfolio-item">
-                <a href="#">
+                <a href="Huntress_Ian_CV">
                     <img class="img-responsive" src="http://lorempixel.com/700/400/nature/2" alt="">
                 </a>
                 <h3>
