--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <h3>
                     <a href="WizardArenaTest">3JS Arena Prototype</a>
                 </h3>
-                <p>Wizards, throwing fireballs in your browser</p>
+                <p>Wizards throwing fireballs in your browser</p>
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="Huntress_Ian_CV">
