--- a/WizardArenaTest.html
+++ b/WizardArenaTest.html
@@ -204,8 +204,8 @@
 
                 // Create a sphere
                 var mass = 5, radius = 1.3;
-                //sphereShape = new CANNON.Sphere(radius);
-                sphereShape = new CANNON.Box(new CANNON.Vec3(1,3,1));
+                sphereShape = new CANNON.Sphere(radius);
+                //sphereShape = new CANNON.Box(new CANNON.Vec3(1,3,1));
 
                 sphereBody = new CANNON.Body({ mass: mass });
                 sphereBody.addShape(sphereShape);
