--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="WizardArenaTest">
-                    <img class="img-responsive" src="http://lorempixel.com/700/400/nature/1" alt="">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/img/WizardFightPic" alt="">
                 </a>
                 <h3>
                     <a href="WizardArenaTest">3JS Arena Prototype</a>
                 </h3>
-                <p>Wizards throwing fireballs in your browser</p>
+                <p>Wizards throwing fireballs in your browser with Three.js and Cannon.js</p>
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="Huntress_Ian_CV">
-                    <img class="img-responsive" src="http://lorempixel.com/700/400/nature/2" alt="">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/img/ResumePic" alt="">
                 </a>
                 <h3>
                     <a href="Huntress_Ian_CV">CV</a>
