--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="WizardArenaTest">
-                    <img class="img-responsive" src="http://ianhuntress.github.io/img/WizardFightPic" alt="">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/img/WizardFightPic.png" alt="">
                 </a>
                 <h3>
                     <a href="WizardArenaTest">3JS Arena Prototype</a>
@@ -96,7 +96,7 @@
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="Huntress_Ian_CV">
-                    <img class="img-responsive" src="http://ianhuntress.github.io/img/ResumePic" alt="">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/img/ResumePic.PNG" alt="">
                 </a>
                 <h3>
                     <a href="Huntress_Ian_CV">CV</a>
