--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <img class="img-responsive" src="http://ianhuntress.github.io/img/ResumePic.PNG" alt="">
                 </a>
                 <h3>
-                    <a href="Huntress_Ian_CV">CV</a>
+                    <a href="Huntress_Ian_CV.pdf">CV</a>
                 </h3>
                 <p>Bioinformatics + Machine Learning + Molecular Biology</p>
             </div>
