--- a/index.html
+++ b/index.html
@@ -84,6 +84,19 @@
         <!-- /.row -->
 
         <!-- Projects Row -->
+        
+        <div class="row">
+            <div class="col-md-6 portfolio-item">
+                <a href="WizardArenaTest">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/img/Relay.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="WizardArenaTest"></a>
+                </h3>
+                <p>Automated garden watering with Raspberry Pi 2 + solenoid valve.</p>
+            </div>
+
+        </div>
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="WizardArenaTest">
