--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                     <img class="img-responsive" src="http://ianhuntress.github.io/img/Relay.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="WizardArenaTest"></a>
+                    <a href="">Automated Garden Sprinkler</a>
                 </h3>
-                <p>Automated garden watering with Raspberry Pi 2 + solenoid valve.</p>
+                <p>Raspberry Pi 2 controls solenoid valve through web server or crontab job</p>
             </div>
 
         </div>
