--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         
         <div class="row">
             <div class="col-md-6 portfolio-item">
-                <a href="WizardArenaTest">
+                <a href="">
                     <img class="img-responsive" src="http://ianhuntress.github.io/img/Relay.jpg" alt="">
                 </a>
                 <h3>
@@ -95,7 +95,15 @@
                 </h3>
                 <p>Raspberry Pi 2 controls solenoid valve through web server or crontab job</p>
             </div>
-
+            <div class="col-md-6 portfolio-item">
+                <a href="">
+                    <img class="img-responsive" src="http://imgur.com/9bY7acl" alt="">
+                </a>
+                <h3>
+                    <a href="">Food valves?</a>
+                </h3>
+                <p>Raspberry Pi 2 controls popcorn valve. Smart home here I come.</p>
+            </div>
         </div>
         <div class="row">
             <div class="col-md-6 portfolio-item">
