--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="">
-                    <img class="img-responsive" src="http://imgur.com/9bY7acl" alt="">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/img/popcorn.gif" alt="">
                 </a>
                 <h3>
                     <a href="">Food valves?</a>
