--- a/index.html
+++ b/index.html
@@ -84,11 +84,22 @@
         <!-- /.row -->
 
         <!-- Projects Row -->
-        
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="">
-                    <img class="img-responsive" src="http://ianhuntress.github.io/img/Relay.jpg" alt="">
+                    <source src="http://ianhuntress.github.io/img/RLAgent1.mp4" type="video/mp4" alt="8/12/2017">
+                </a>
+                <h3>
+                    <a href="http://ianhuntress.github.io/img/ThreejsJumpEnv.py">TensorFlow Attempt #1</a>
+                </h3>
+                <p>RL agent uses his 200 LSTM memory to completely ignore an obstacle course in favor of jumping up and down.</p>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-md-6 portfolio-item">
+                <a href="">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/img/Relay.jpg" alt="6/1/2017">
                 </a>
                 <h3>
                     <a href="">Automated Garden Sprinkler</a>
@@ -97,18 +108,28 @@
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="">
-                    <img class="img-responsive" src="http://ianhuntress.github.io/img/popcorn.gif" alt="">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/img/popcorn.gif" alt="8/19/2017">
                 </a>
                 <h3>
                     <a href="">Food valves?</a>
                 </h3>
                 <p>Raspberry Pi 2 controls popcorn valve. Smart home here I come.</p>
             </div>
+            <div class="col-md-6 portfolio-item">
+                <a href="">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/img/Donuts.jpg" alt="8/5/2017">
+                </a>
+                <h3>
+                    <a href="">Automated Garden Sprinkler</a>
+                </h3>
+                <p>I coded myself up some donuts and only burned myself a little.</p>
+            </div>
+            
         </div>
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="WizardArenaTest">
-                    <img class="img-responsive" src="http://ianhuntress.github.io/img/WizardFightPic.png" alt="">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/img/WizardFightPic.png" alt="8/1/2016">
                 </a>
                 <h3>
                     <a href="WizardArenaTest">3JS Arena Prototype</a>
@@ -117,7 +138,7 @@
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="Huntress_Ian_CV">
-                    <img class="img-responsive" src="http://ianhuntress.github.io/img/ResumePic.PNG" alt="">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/img/ResumePic.PNG" alt="8/1/2016">
                 </a>
                 <h3>
                     <a href="Huntress_Ian_CV.pdf">CV</a>
