adulthood means donuts

--- a/index.html
+++ b/index.html
@@ -86,15 +86,24 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-6 portfolio-item">
-                <a href="">
-                    <source src="http://ianhuntress.github.io/img/RLAgent1.mp4" type="video/mp4" alt="8/12/2017">
-                </a>
+                <video width="320" height="240" controls>
+                  <source src="http://ianhuntress.github.io/img/RLAgent1.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
                 <h3>
                     <a href="http://ianhuntress.github.io/img/ThreejsJumpEnv.py">TensorFlow Attempt #1</a>
                 </h3>
                 <p>RL agent uses his 200 LSTM memory to completely ignore an obstacle course in favor of jumping up and down.</p>
             </div>
-
+            <div class="col-md-6 portfolio-item">
+                <a href="">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/img/Donuts.jpg" alt="8/5/2017">
+                </a>
+                <h3>
+                    <a href="">Responsible adult choices!</a>
+                </h3>
+                <p>I coded myself up some donuts and only burned myself a little.</p>
+            </div>
         </div>
         <div class="row">
             <div class="col-md-6 portfolio-item">
@@ -115,15 +124,7 @@
                 </h3>
                 <p>Raspberry Pi 2 controls popcorn valve. Smart home here I come.</p>
             </div>
-            <div class="col-md-6 portfolio-item">
-                <a href="">
-                    <img class="img-responsive" src="http://ianhuntress.github.io/img/Donuts.jpg" alt="8/5/2017">
-                </a>
-                <h3>
-                    <a href="">Automated Garden Sprinkler</a>
-                </h3>
-                <p>I coded myself up some donuts and only burned myself a little.</p>
-            </div>
+
             
         </div>
         <div class="row">
