Fixed resume link

--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
                 <p>Wizards throwing fireballs in your browser with Three.js and Cannon.js</p>
             </div>
             <div class="col-md-6 portfolio-item">
-                <a href="Huntress_Ian_CV">
+                <a href="Huntress_Ian_CV_2016.pdf">
                     <img class="img-responsive" src="http://ianhuntress.github.io/img/ResumePic.PNG" alt="8/1/2016">
                 </a>
                 <h3>
-                    <a href="Huntress_Ian_CV.pdf">CV</a>
+                    <a href="Huntress_Ian_CV_2016.pdf">CV</a>
                 </h3>
                 <p>Bioinformatics + Machine Learning + Molecular Biology</p>
             </div>
