--- a/index.html
+++ b/index.html
@@ -86,6 +86,18 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-6 portfolio-item">
+                <a href="">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/img/StandardMap.png" alt="12/1/2017">
+                </a>
+                <h3>
+                    <a href="">Standard Map</a>
+                </h3>
+                <p>Using Tensorflow tutorials and matplotlib to explore Chirikov standard map</p>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-md-6 portfolio-item">
                 <video width="320" height="240" controls>
                   <source src="http://ianhuntress.github.io/img/RLAgent1.mp4" type="video/mp4">
                   Your browser does not support the video tag.
