--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="">
-                    <img class="img-responsive" src="http://ianhuntress.github.io/img/StandardMap.png" alt="12/1/2017">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/StandardMap.png" alt="12/1/2017">
                 </a>
                 <h3>
                     <a href="">Standard Map</a>
