--- a/index.html
+++ b/index.html
@@ -94,8 +94,18 @@
                 </h3>
                 <p>Using Tensorflow tutorials and matplotlib to explore Chirikov standard map</p>
             </div>
-
+            
+            <div class="col-md-6 portfolio-item">
+                <a href="">
+                    <img class="img-responsive" src="http://ianhuntress.github.io/img/HasteyGraph.PNG" alt="12/1/2017">
+                </a>
+                <h3>
+                    <a href="http://ianhuntress.github.io/hastey.html">Hastey</a>
+                </h3>
+                <p>Hastey exploration of Metropolis Hastings Algorithm</p>
+            </div>
         </div>
+        
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <video width="320" height="240" controls>
