--- a/hastey.html
+++ b/hastey.html
@@ -19,6 +19,7 @@
     td { 
         width: 33%;
     }
+        body {  margins: 1em; } 
     </style>
 <body>
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
